@@ -20,7 +20,6 @@ import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
@@ -28,6 +27,7 @@ import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.plugins.tree.TreeUtil;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentity;
@@ -53,8 +53,8 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toSet;
 import static org.apache.jackrabbit.JcrConstants.JCR_UUID;
 import static org.apache.jackrabbit.oak.spi.security.authentication.external.TestIdentityProvider.ID_SECOND_USER;
 import static org.apache.jackrabbit.oak.spi.security.authentication.external.TestIdentityProvider.ID_TEST_USER;
@@ -126,7 +126,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
             } catch (RepositoryException e) {
                 return null;
             }
-        }).filter(Objects::nonNull).collect(Collectors.toSet());
+        }).filter(Objects::nonNull).collect(toSet());
 
         Set<String> expected = new HashSet<>();
         collectGroupPrincipals(expected, externalIdentity.getDeclaredGroups(), depth);
@@ -245,7 +245,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
         PropertyState extPrincipalNames = tree.getProperty(REP_EXTERNAL_PRINCIPAL_NAMES);
         assertNotNull(extPrincipalNames);
 
-        Set<String> pNames = Sets.newHashSet(extPrincipalNames.getValue(Type.STRINGS));
+        Set<String> pNames = CollectionUtils.toSet(extPrincipalNames.getValue(Type.STRINGS));
         for (ExternalIdentityRef ref : externalUser.getDeclaredGroups()) {
             assertTrue(pNames.remove(idp.getIdentity(ref).getPrincipalName()));
         }
@@ -263,8 +263,8 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
         PropertyState extPrincipalNames = tree.getProperty(REP_EXTERNAL_PRINCIPAL_NAMES);
         assertNotNull(extPrincipalNames);
 
-        Set<String> pNames = Sets.newHashSet(extPrincipalNames.getValue(Type.STRINGS));
-        Set<String> expected = Sets.newHashSet();
+        Set<String> pNames = CollectionUtils.toSet(extPrincipalNames.getValue(Type.STRINGS));
+        Set<String> expected = new HashSet<>();
         collectGroupPrincipals(expected, externalUser.getDeclaredGroups(), Long.MAX_VALUE);
 
         assertEquals(expected, pNames);
@@ -353,7 +353,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
         assertNotNull(extPrincipalNames);
 
         // the resulting rep:externalPrincipalNames must NOT contain the name of the colliding principal
-        Set<String> pNames = Sets.newHashSet(extPrincipalNames.getValue(Type.STRINGS));
+        Set<String> pNames = CollectionUtils.toSet(extPrincipalNames.getValue(Type.STRINGS));
         assertFalse(pNames + " must not contain " + externalGroup.getPrincipalName(), pNames.contains(externalGroup.getPrincipalName()));
     }
 
@@ -376,7 +376,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
         assertNotNull(extPrincipalNames);
 
         // the resulting rep:externalPrincipalNames must NOT contain the name of the colliding principal
-        Set<String> pNames = Sets.newHashSet(extPrincipalNames.getValue(Type.STRINGS));
+        Set<String> pNames = CollectionUtils.toSet(extPrincipalNames.getValue(Type.STRINGS));
         assertFalse(pNames + " must not contain " + externalGroup.getPrincipalName(), pNames.contains(externalGroup.getPrincipalName()));
     }
 
@@ -588,12 +588,12 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
 
         // sync user with modified membership => must be reflected
         // 1. empty set of declared groups
-        ExternalUser mod = new TestUserWithGroupRefs(externalUser, ImmutableSet.of());
+        ExternalUser mod = new TestUserWithGroupRefs(externalUser, Set.of());
         syncContext.syncMembership(mod, a, nesting);
         assertDynamicMembership(a, mod, nesting);
 
         // 2. set with different groups than defined on IDP
-        mod = new TestUserWithGroupRefs(externalUser, ImmutableSet.of(
+        mod = new TestUserWithGroupRefs(externalUser, Set.of(
                 idp.getGroup("a").getExternalId(),
                 idp.getGroup("aa").getExternalId(),
                 idp.getGroup("secondGroup").getExternalId()));
@@ -609,7 +609,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
 
         // sync user with modified membership => must be reflected
         // 1. empty set of declared groups
-        ExternalUser mod = new TestUserWithGroupRefs(previouslySyncedUser, ImmutableSet.of());
+        ExternalUser mod = new TestUserWithGroupRefs(previouslySyncedUser, Set.of());
         syncContext.syncMembership(mod, a, nesting);
         assertSyncedMembership(userManager, a, mod, nesting);
     }
@@ -622,7 +622,7 @@ public class DynamicSyncContextTest extends AbstractDynamicTest {
 
         // sync user with modified membership => must be reflected
         // 2. set with different groups that defined on IDP
-        ExternalUser mod = new TestUserWithGroupRefs(previouslySyncedUser, ImmutableSet.of(
+        ExternalUser mod = new TestUserWithGroupRefs(previouslySyncedUser, Set.of(
                         idp.getGroup("a").getExternalId(),
                         idp.getGroup("aa").getExternalId(),
                         idp.getGroup("secondGroup").getExternalId()));
