@@ -19,11 +19,11 @@ package org.apache.jackrabbit.oak.spi.security.authorization.principalbased.impl
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlManager;
 import org.apache.jackrabbit.oak.api.ContentSession;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.spi.security.authorization.AuthorizationConfiguration;
 import org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol.ReadPolicy;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.PermissionConstants;
@@ -39,6 +39,7 @@ import javax.security.auth.Subject;
 import java.security.Principal;
 import java.security.PrivilegedExceptionAction;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
 
@@ -70,7 +71,7 @@ public class ReadablePathsAccessControlTest extends AbstractPrincipalBasedTest {
         assertFalse(paths.isEmpty());
 
         readablePaths = Iterators.cycle(Iterables.transform(paths, f -> getNamePathMapper().getJcrPath(f)));
-        Set<String> childPaths = Sets.newHashSet();
+        Set<String> childPaths = new HashSet<>();
         for (String path : paths) {
             Iterables.addAll(childPaths, Iterables.transform(root.getTree(path).getChildren(), tree -> getNamePathMapper().getJcrPath(tree.getPath())));
         }
@@ -78,7 +79,7 @@ public class ReadablePathsAccessControlTest extends AbstractPrincipalBasedTest {
     }
 
     private Subject getTestSubject() {
-        return new Subject(true, Collections.singleton(testPrincipal), ImmutableSet.of(), ImmutableSet.of());
+        return new Subject(true, Collections.singleton(testPrincipal), Set.of(), Set.of());
     }
 
     @Test
@@ -221,7 +222,7 @@ public class ReadablePathsAccessControlTest extends AbstractPrincipalBasedTest {
         // test-session can read-ac at readable path and at principal-based policy
         try (ContentSession cs = Subject.doAsPrivileged(getTestSubject(), (PrivilegedExceptionAction<ContentSession>) () -> getContentRepository().login(null, null), null)) {
             PrincipalBasedAccessControlManager testAcMgr = new PrincipalBasedAccessControlManager(getMgrProvider(cs.getLatestRoot()), getFilterProvider());
-            Set<AccessControlPolicy> effective = Sets.newHashSet(testAcMgr.getEffectivePolicies(path));
+            Set<AccessControlPolicy> effective = CollectionUtils.toSet(testAcMgr.getEffectivePolicies(path));
 
             assertEquals(2, effective.size());
             assertTrue(effective.remove(ReadPolicy.INSTANCE));
