@@ -21,15 +21,13 @@ import java.util.Set;
 import java.util.UUID;
 import javax.jcr.security.Privilege;
 
-import org.apache.jackrabbit.guava.common.base.Function;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.api.security.authorization.PrivilegeManager;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.spi.security.principal.EveryonePrincipal;
 import org.apache.jackrabbit.oak.spi.security.privilege.PrivilegeConstants;
-import org.jetbrains.annotations.Nullable;
 import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
@@ -118,13 +116,8 @@ public class L4_CustomPrivilegeTest extends AbstractSecurityTest {
             fail();
         }
 
-        Iterable<String> resultNames = Iterables.transform(Sets.newHashSet(result), new Function<Privilege, String>() {
-            @Nullable
-            @Override
-            public String apply(Privilege input) {
-                return input.toString();
-            }
-        });
+        Iterable<String> resultNames = Iterables.transform(CollectionUtils.toSet(result),
+                Object::toString);
 
         Iterables.removeAll(resultNames, expectedNames);
         assertFalse(resultNames.iterator().hasNext());
@@ -153,7 +146,7 @@ public class L4_CustomPrivilegeTest extends AbstractSecurityTest {
             // EXERCISE : fix the test case such that the test principals have the specified privileges granted at "/"
 
             Privilege[] testPrivileges = new Privilege[] {customAbstractPriv, customAggrPriv};
-            Set<Principal> testPrincipals = ImmutableSet.of(EveryonePrincipal.getInstance(), getTestUser().getPrincipal());
+            Set<Principal> testPrincipals = Set.of(EveryonePrincipal.getInstance(), getTestUser().getPrincipal());
             boolean hasPrivilege = getAccessControlManager(root).hasPrivileges("/", testPrincipals, testPrivileges);
 
             assertTrue(hasPrivilege);
