@@ -142,7 +142,7 @@ public class RepositoryTest extends AbstractRepositoryTest {
         assertNotNull(session);
         Set<Principal> principals = (Set<Principal>) session.getAttribute(RepositoryImpl.BOUND_PRINCIPALS);
         assertNotNull(principals);
-        Set<String> expectedPrincipalNames = new HashSet<>(Arrays.asList("admin", "everyone"));
+        Set<String> expectedPrincipalNames = Set.of("admin", "everyone");
         assertEquals(expectedPrincipalNames, principals.stream().map(Principal::getName).collect(Collectors.toSet()));
     }
 
@@ -160,7 +160,7 @@ public class RepositoryTest extends AbstractRepositoryTest {
         Set<Principal> principals = (Set<Principal>) session.getAttribute(RepositoryImpl.BOUND_PRINCIPALS);
         assertNotNull(principals);
         // admin must not be contained in the principals (altough added in the login attributes)
-        Set<String> expectedPrincipalNames = new HashSet<>(Arrays.asList("anonymous", "everyone"));
+        Set<String> expectedPrincipalNames = Set.of("anonymous", "everyone");
         assertEquals(expectedPrincipalNames, principals.stream().map(Principal::getName).collect(Collectors.toSet()));
         session.logout();
     }
@@ -1994,6 +1994,55 @@ public class RepositoryTest extends AbstractRepositoryTest {
         nsReg.unregisterNamespace("foo");
         assertFalse(asList(nsReg.getPrefixes()).contains("foo"));
         assertFalse(asList(nsReg.getURIs()).contains("file:///foo"));
+    }
+
+    @Test
+    public void testUnregisterNamespaceWhenUsed() throws RepositoryException {
+
+        // see OAK-11138
+
+        String testNamespaceName1 = "file:///foo";
+        String testNamespaceName2 = "file:///bar";
+        Session session = getAdminSession();
+
+        NamespaceRegistry nsReg = session.getWorkspace().getNamespaceRegistry();
+        assertFalse(asList(nsReg.getPrefixes()).contains("foo"));
+        assertFalse(asList(nsReg.getURIs()).contains(testNamespaceName1));
+
+        nsReg.registerNamespace("foo", testNamespaceName1);
+        assertTrue(asList(nsReg.getPrefixes()).contains("foo"));
+        assertTrue(asList(nsReg.getURIs()).contains(testNamespaceName1));
+
+        // check that nodes are "same" independent of how retrieved
+        Node x1 = session.getRootNode().addNode("foo:test");
+        session.save();
+        Node x2 = session.getRootNode().getNode("{" + testNamespaceName1 + "}test");
+        assertTrue(x1.isSame(x2));
+
+        // unregister and add with a new name
+        nsReg.unregisterNamespace("foo");
+        assertFalse(asList(nsReg.getPrefixes()).contains("foo"));
+        assertFalse(asList(nsReg.getURIs()).contains(testNamespaceName1));
+        nsReg.registerNamespace("foo", testNamespaceName2);
+        assertTrue(asList(nsReg.getPrefixes()).contains("foo"));
+        assertTrue(asList(nsReg.getURIs()).contains(testNamespaceName2));
+
+        try {
+            session.getRootNode().getNode("{" + testNamespaceName1 + "}test");
+        } catch (PathNotFoundException expected) {
+            // we expect that this fails as the namespace name has been removed
+        }
+
+        // after remapping, the node created earlier is stil accessible with the
+        // name prefix, but the expanded name has changed
+        Node x3 = session.getRootNode().getNode("{" + testNamespaceName2 + "}test");
+        Node x4 = session.getRootNode().getNode("foo:test");
+        assertTrue(x3.isSame(x4));
+
+        nsReg.unregisterNamespace("foo");
+
+        session.getRootNode().getNode("foo:test").remove();
+        session.save();
     }
 
     @Test
