@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.plugins.document.persistentCache;
 
-import static org.apache.jackrabbit.guava.common.base.Predicates.in;
-import static org.apache.jackrabbit.guava.common.base.Predicates.not;
 import static org.apache.jackrabbit.guava.common.collect.Iterables.filter;
 import static java.util.Collections.singleton;
 import static org.apache.jackrabbit.guava.common.cache.RemovalCause.COLLECTED;
@@ -27,6 +25,7 @@ import static org.apache.jackrabbit.guava.common.cache.RemovalCause.SIZE;
 import java.nio.ByteBuffer;
 import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentMap;
@@ -46,20 +45,17 @@ import org.apache.jackrabbit.oak.plugins.document.persistentCache.async.CacheWri
 import org.apache.jackrabbit.oak.stats.StatisticsProvider;
 import org.apache.jackrabbit.oak.stats.TimerStats;
 import org.h2.mvstore.MVMap;
-import org.h2.mvstore.WriteBuffer;
 import org.h2.mvstore.type.DataType;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import org.apache.jackrabbit.guava.common.base.Function;
 
 class NodeCache<K extends CacheValue, V extends  CacheValue>
         implements Cache<K, V>, GenerationCache, EvictionListener<K, V> {
 
     static final Logger LOG = LoggerFactory.getLogger(NodeCache.class);
 
-    private static final Set<RemovalCause> EVICTION_CAUSES = ImmutableSet.of(COLLECTED, EXPIRED, SIZE);
+    private static final Set<RemovalCause> EVICTION_CAUSES = Set.of(COLLECTED, EXPIRED, SIZE);
 
     private final PersistentCache cache;
     private final PersistentCacheStats stats;
@@ -162,10 +158,7 @@ class NodeCache<K extends CacheValue, V extends  CacheValue>
     }
 
     private void broadcast(final K key, final V value) {
-        cache.broadcast(type, new Function<WriteBuffer, Void>() {
-            @Override
-            @Nullable
-            public Void apply(@Nullable WriteBuffer buffer) {
+        cache.broadcast(type, buffer -> {
                 keyType.write(buffer, key);
                 if (value == null) {
                     buffer.put((byte) 0);
@@ -174,8 +167,7 @@ class NodeCache<K extends CacheValue, V extends  CacheValue>
                     valueType.write(buffer, value);
                 }
                 return null;
-            }
-        });
+            });
     }
 
     private void write(final K key, final V value) {
@@ -259,7 +251,7 @@ class NodeCache<K extends CacheValue, V extends  CacheValue>
         Iterable<K> typedKeys = (Iterable<K>) keys;
         memCacheMetadata.incrementAll(keys);
         ImmutableMap<K, V> result = memCache.getAllPresent(keys);
-        memCacheMetadata.removeAll(filter(typedKeys, not(in(result.keySet()))));
+        memCacheMetadata.removeAll(filter(typedKeys, x -> !result.keySet().contains(x)));
         return result;
     }
 
@@ -353,7 +345,7 @@ class NodeCache<K extends CacheValue, V extends  CacheValue>
      */
     @Override
     public void evicted(K key, V value, RemovalCause cause) {
-        if (async && EVICTION_CAUSES.contains(cause) && value != null) {
+        if (async && Objects.nonNull(cause) && EVICTION_CAUSES.contains(cause) && value != null) {
             CacheMetadata.MetadataEntry metadata = memCacheMetadata.remove(key);
             boolean qualifiesToPersist = true;
             if (metadata != null && metadata.isReadFromPersistentCache()) {
